# PetitPoint

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  petitpoint.cbp  petitpoint.depend  petitpoint.layout
Maps/: Enemies.tsx  Flags.tsx  Manoir.tsx  Manoir2.tsx  Manoir2_SA.tmx  Manoir2_SJ.tmx  ManoirRoom1  Manoir_SJ.tmx  PetitPoint.tsx  pika.tsx
include/: Enemy.h  FakeBackground.h  FakeLevelState.h  GameMachine.h  GameState.h  LAnimation.h  LMap.h  LTexture.h  LWindow.h  LevelState.h  Manoir.h  Personage.h  PetitPoint.h  RessourcesRepo.h  Room.h  Tile.h  Tiled.h  TitleScreenState.h
petitpoint/: CMakeLists.txt
petitpoint/include/: Commands.h  GameMachine.h  GameState.h  LAnimation.h  LFont.h  LMap.h  LTexture.h  LWindow.h  LevelState.h  Manoir.h  Personage.h  PetitPoint.h  RessourcesRepo.h  Tile.h  Tiled.h  TitleScreenState.h  Utilities.h  command.h
petitpoint/include/decor/: LifeBar.h
petitpoint/include/gamestates/: GameState.h  InventoryState.h  LevelState.h  TitleScreenState.h
petitpoint/include/personages/: Enemy.h  Personage.h  PetitPoint.h
petitpoint/include/resources/: ResourcesLoader.h
petitpoint/include/tiled/: Tiled.h
petitpoint/src/: Commands.cpp  Enemy.cpp  GameMachine.cpp  LFont.cpp  LMap.cpp  LTexture.cpp  LWindow.cpp  LevelState.cpp  Personage.cpp  PetitPoint.cpp  RessourcesRepo.cpp  Tiled.cpp  TitleScreenState.cpp  Utilities.cpp  main.cpp
petitpoint/src/decor/: LifeBar.cpp
petitpoint/src/gamestates/: GameState.cpp  InventoryState.cpp  LevelState.cpp  TitleScreenState.cpp
petitpoint/src/personages/: Enemy.cpp  Personage.cpp  PetitPoint.cpp
petitpoint/src/tiled/: Tiled.cpp
petitpointtests/: CMakeLists.txt  tiledtests.cpp  utilitiestests.cpp
resources/carte du jeu/: salle 3.tmx
resources/carte du jeu/titled/: eau.piskel  eau.tsx  miro.piskel  nain-statue.piskel  obstacle.piskel  pallette couleur 1.gpl  plancher jaune.piskel  plancherpis.piskel  tuile map.piskel
resources/tilemaps/: foret1.tmx  manoir_WC.tmx  manoir_bibli.tmx  manoir_corridor.tmx  map salle 1.tmx  map-salle 2.tmx
resources/tilesets/: Assassin.tsx  Foret1.tsx  Lore.tsx  Manoir.tsx  PetitLore.tsx  plancher.tsx
src/: Enemy.cpp  FakeBackground.cpp  FakeLevelState.cpp  GameMachine.cpp  LAnimation.cpp  LMap.cpp  LTexture.cpp  LWindow.cpp  LevelState.cpp  Manoir.cpp  Personage.cpp  PetitPoint.cpp  RessourcesRepo.cpp  Room.cpp  Tile.cpp  Tiled.cpp  TitleScreenState.cpp  main.cpp
